# Saw-Fence-Reboot-Automation

./: MainSawFence.ino  NoName1.4DGenie  README.md
4D-Systems-Workshop4-GUI-Files/: SAW-FE~1.d01  SAW-FE~1.g01  SAW-FE~1.gci  SAW-FE~1.txf  Saw-Fence.4DGenie  Saw-Fence.4XE  Saw-Fence.cfg  SawFence.4DGenie
4D-Systems-Workshop4-GUI-Files/Saw-Fence.4DWork/: Saw-Fence.4DGenieS  Saw-Fence.aux  Saw-Fence.err  Saw-Fence.lst  Saw-Fence.map  Saw-Fence.pjt  Saw-FenceConst.inc
4D-Systems-Workshop4-GUI-Files/Saw-Fence.ImgData/: Agency FB-53____A.font  KB2.kbd
4D-Systems-Workshop4-GUI-Files/SawFence.ImgData/: KB1.kbd$  (+2 more)
Config-Wizard/: index.html  script.js  style.css
Main-Saw-Fence-ClearCore/: Main-Saw-Fence-ClearCore.ino  MechanismClasses.cpp  MechanismClasses.h  MotorClasses.cpp  MotorClasses.h  SDHelper.cpp  SDHelper.h  ScreenClasses.cpp  ScreenClasses.h  Utils.cpp  Utils.h
Main-Saw-Fence-Giga/: Main-Saw-Fence-Giga.ino
MainSawFence/: MainSawFence.ino  MechanismClasses.cpp  MechanismClasses.h  MotorClasses.cpp  UIControl.ino
Squareline-Studio-GUI-Files/: Saw-Fence.sll  Saw-Fence.spj
replacement-libs/: lv_conf.h
replacement-libs/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
replacement-libs/ui/src/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_imgbutton1.c  ui_comp_imgbutton1.h
replacement-libs/ui/src/screens/: ui_MainControlScreen.c  ui_MainControlScreen.h  ui_ParameterEditScreen.c  ui_ParameterEditScreen.h  ui_SettingsScreen.c  ui_SettingsScreen.h  ui_SplashScreen.c  ui_SplashScreen.h
(+5 files in other folders)
